2008-04-05  Albert Chu <chu11@llnl.gov>

	* ipmipower/: Finish -B support.

	* ipmipower/: Add -F support.

	* doc/freeipmi-hostranged.txt: Update appropriately.
	
2008-04-04  Albert Chu <chu11@llnl.gov>

	* ipmipower/: Support -B option for consistency to other tools,
	although -B does nothing.  Change original -B option to -G.

	* common/doc/manpage-common-hostranged-text-options.man: Move
	option text into manpage-common-hostranged-text-main.man.

	* common/doc/manpage-common-hostranged-text-options.man: Rename to
	manpage-common-hostranged-text-localhost.man and only mention
	localhost information.

	* Update manpages appropriately.
	
2008-04-04  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors-config/ipmi-sensors-config.8.pre.in: Add notes
	about ipmi-sensors and ipmimonitoring.

	* bmc-config/: Fix some comments.

	* common/doc/manpage-common-known-issues.man: New file.

	* common/doc/Makefile.am: Update for new file.

	* Update numerous webpages with new known-issues info.
	
	* configure.ac: Prepare for beta release.

	* Tagged Release-0_6_0_beta0.

2008-04-03  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/src/ipmi-sensors-very-verbose-display.c
	(_output_very_verbose_header),
	ipmi-sensors/src/ipmi-sensors-verbose-display.c
	(_output_verbose_header): Output sensor owner ids as needed.
	
2008-04-02  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/ipmiconsole.8.pre.in: Modify escape sequence
	main text to mention -e option.

	* freeipmi.spec.in: Update w/ missing files.

	* bmc-watchdog/Makefile.am: Fix install bug.

	* common/src/config-common.h, common/src/config-checkout.c,
	common/src/config-commit.c: Suppoert new CONFIG_UNDEFINED flag.

	* ipmi-sensors-config/src/ipmi-sensors-config-threshold-section.c:
	Unreadable thresholds are now output as being undefined.

	* ipmi-sensors/, ipmimonitoring/: Support reading of sensors with
	sensor_owner_id not reserved.

	* ipmimonitoring/: Support drive slot device install
	interpretation.
	